update margins to stop word wrapping column headers

--- a/app/style/print.css
+++ b/app/style/print.css
@@ -11,6 +11,11 @@ body {
     @page {
         size: auto;
     }
+
+    body {
+        padding-top: 20px;
+    }
+
     #main {
         width: 100% !important;
     }
